--- a/Web.Statu/Views/Subjekt/_subjektLayout.cshtml
+++ b/Web.Statu/Views/Subjekt/_subjektLayout.cshtml
@@ -99,7 +99,7 @@
     <div class="col-sm-1">
     </div>
 
-    @Html.CachedAction(HtmlExtensions.CachedActionLength.debug, Model.viewName, Model.firma, Model.firma.ICO, this?.User?.Identity?.IsAuthenticated)
+    @Html.CachedAction(HtmlExtensions.CachedActionLength.Cache12H, Model.viewName, Model.firma, Model.firma.ICO, this?.User?.Identity?.IsAuthenticated)
 
 
 </div>
