--- a/Web.Statu/Views/Subjekt/_subjektLayout.cshtml
+++ b/Web.Statu/Views/Subjekt/_subjektLayout.cshtml
@@ -38,8 +38,8 @@
     <script src="/scripts/highcharts-6/highcharts-more.js"></script>
     <script src="/scripts/highcharts-6/modules/heatmap.js"></script>
     <script src="/scripts/highcharts-6/modules/treemap.js"></script>
-
-
+    @* Přidá barevnou paletu ke grafům *@
+    @Html.GraphTheme() 
 }
 
 <style>
