--- a/Web.Statu/Views/Subjekt/RegistrSmluv.cshtml
+++ b/Web.Statu/Views/Subjekt/RegistrSmluv.cshtml
@@ -33,11 +33,8 @@
 
 
 
-
-
     var statistics = Model.StatistikaRegistruSmluv();
-    int chartMinDate = 2016;
-    int chartMaxDate = DateTime.Now.Year;
+    
     var statisticsAfter2016 = statistics
         .Where(s => statistics.YearsAfter2016().Contains(s.Year))
         .OrderBy(s => s.Year);
@@ -56,7 +53,6 @@
     {
         new HlidacStatu.Lib.Render.Series()
         {
-            Color = "#AAAAAA",
             Name = "Hodnota smluv",
             Type = Series.SeriesType.column,
             Data = statisticsAfter2016
@@ -66,35 +62,32 @@
                 ValueSuffix = " Kč"
             }
         },
-        //new HlidacStatu.Lib.Render.Series()
-        //{
-        //    Color = "#333333",
-        //    Name = "Hodnota smluv se soukromými subjekty",
-        //    Type = Series.SeriesType.column,
-        //    Data = statisticsAfter2016
-        //        .Select(x => new SeriesData(x.Year, x.Value.CelkovaHodnotaSmluvSeSoukrSubj)).ToArray(),
-        //    SeriesTooltip = new SeriesTooltip()
-        //    {
-        //        ValueSuffix = " Kč"
-        //    }
-        //},
         new HlidacStatu.Lib.Render.Series()
         {
-            Color = "#770077",
+            Name = "Hodnota smluv se soukromými subjekty",
+            Type = Series.SeriesType.column,
+            Data = statisticsAfter2016
+                .Select(x => new SeriesData(x.Year, x.Value.CelkovaHodnotaSmluvSeSoukrSubj)).ToArray(),
+            SeriesTooltip = new SeriesTooltip()
+            {
+                ValueSuffix = " Kč"
+            }
+        },
+        new HlidacStatu.Lib.Render.Series()
+        {
             Name = "Počet smluv bez ceny",
             Data = statisticsAfter2016
                 .Select(x => new SeriesData(x.Year, x.Value.PocetSmluvBezCeny)).ToArray(),
             Type = Series.SeriesType.line,
 
         }
-                                    };
+    };
 
     //Graf počet smluv/počet smluv s utajenou cenou
     var pocetSmluvGraphData = new HlidacStatu.Lib.Render.Series[]
     {
         new HlidacStatu.Lib.Render.Series()
         {
-            Color = "#AAAAAA",
             Name = "Počet smluv",
             Type = Series.SeriesType.column,
             Data = statisticsAfter2016
@@ -102,21 +95,19 @@
         },
         new HlidacStatu.Lib.Render.Series()
         {
-            Color = "#333333",
             Name = "Počet smluv s utajenou cenou",
             Type = Series.SeriesType.column,
             Data = statisticsAfter2016
                 .Select(x => new SeriesData(x.Year, x.Value.PocetSmluvBezCeny)).ToArray(),
 
         },
-                                    };
+    };
 
     //Graf počet smluv/počet smluv s utajenou cenou
     var procentaSmluvGraphData = new HlidacStatu.Lib.Render.Series[]
     {
         new HlidacStatu.Lib.Render.Series()
         {
-            Color = "#CCCCCC",
             Name = "s utajenou cenou",
             Type = Series.SeriesType.column,
             Data = statisticsAfter2016
@@ -128,7 +119,6 @@
         },
         new HlidacStatu.Lib.Render.Series()
         {
-            Color = "#AAAAAA",
             Name = "s vazbou na politiky",
             Type = Series.SeriesType.column,
             Data = statisticsAfter2016
@@ -139,7 +129,7 @@
             }
         },
 
-                                    };
+    };
 }
 
 
