--- a/Web.Statu/Views/Subjekt/_subjektLayout.cshtml
+++ b/Web.Statu/Views/Subjekt/_subjektLayout.cshtml
@@ -79,6 +79,12 @@
         text-transform: none;
         font-size: 14px;
     }
+
+    hr {
+        border-top: 3px dotted #E0E6ED;
+        margin-top: 24px;
+        margin-bottom: 24px;
+    }
 </style>
 
 
