--- a/Web.Statu/Views/Data/Promo/front_zasedani-zastupitelstev.cshtml
+++ b/Web.Statu/Views/Data/Promo/front_zasedani-zastupitelstev.cshtml
@@ -60,7 +60,7 @@
                 .Chunk((mesta.Count() / 3) + 1))
             {
                 char firstChar = ' ';
-                <div class="col-xs-6 col-sm-4">
+                <div class="col-xs-12 col-sm-6 col-md-4">
 
                     @foreach (var kv in chunk)
                     {
