--- a/Web.Statu/Views/Data/Promo/front_vyjadreni-politiku.cshtml
+++ b/Web.Statu/Views/Data/Promo/front_vyjadreni-politiku.cshtml
@@ -109,7 +109,7 @@
                 .Chunk((politici.Count() / 3) + 1))
             {
                 char firstChar = ' ';
-                <div class="col-xs-6 col-sm-4">
+                <div class="col-xs-12 col-sm-6 col-md-4">
 
                     @foreach (var kv in chunk)
                     {
