--- a/Web.Statu/Views/Home/KapacitaNemocnic_child.cshtml
+++ b/Web.Statu/Views/Home/KapacitaNemocnic_child.cshtml
@@ -37,7 +37,7 @@
     <p>
         Data ÚZIS, která Ministerstvo zdravotnictví tajila nejen před veřejností, ale po zveřejnění dat naším serverem a následným veřejným tlakem od 1.10.2020 zveřejňuje 1x denně.
     </p>
-    <p><span style="color:red">Důležité upozornění:</span>
+<!--    <p><span style="color:red">Důležité upozornění:</span>
         Od 19. října se ptáme poskytovatele dat ÚZIS a prof. MUDr. Vladimíra Černého Ph.D. na tyto otázky. 
     <ul>
         <li>Zveřejňovaná kapacita nemocnic je poměrně stabilní, přestože počet hospitalizovaných narůstá o stovky denně a pacientů na JIP/ARO o desítky denně. Je vykazovaní volnych kapacit lůžek v pořádku?
@@ -48,6 +48,7 @@
     <b style="color:red">za @((DateTime.Now.Date-new DateTime(2020,10,19)).TotalDays.ToString("N0")) dní</b> nedostali odpověď ani vysvětlení. 
     Po první neurčité odpovědi s námi prof. Černý odmítl dále komunikovat.
     </p>
+    -->
     <p><b>Z tohoto důvodu jsme se rozhodli zveřejňovat i stále utajovaná data o aktuálně hospitalizovaných pacientech v jednotlivých krajích a v jednotlivých nemocnicích.
     Počet aktuálně hospitalizovaných jasně ukazuje prudce rostoucí zátěž nemocnic
     </b></p>
