--- a/Web.Statu/Views/Home/Reports/21_VladyCR.cshtml
+++ b/Web.Statu/Views/Home/Reports/21_VladyCR.cshtml
@@ -15,7 +15,13 @@
 @using HlidacStatu.Lib.Render
 
 @{
-
+    //var showList = Osoba.GetByEvent(e =>
+    //        e.Type == (int)OsobaEvent.Types.PolitickaPracovni
+    //        && e.AddInfo.ToLower().StartsWith("ministr")
+    //        && (e.DatumDo == null || e.DatumDo >= DateTime.Now))
+    //    .OrderBy(o => o.Prijmeni)
+    //    .ThenBy(o => o.Jmeno)
+    //    .ToList();
 
     string[] vlada2017 = new string[] {
 "ilja-smid",
