--- a/Web.Statu/Views/NewSearch/Index.cshtml
+++ b/Web.Statu/Views/NewSearch/Index.cshtml
@@ -41,7 +41,11 @@
                     processResults: function (data) {
                         // Transforms the top-level key of the response object from 'items' to 'results'
                         return {
-                            results: data
+                            results: $.map(data, function (obj) {
+                                obj.id = obj.id || obj.Id;
+                                obj.text = obj.text || obj.Text;
+                                return obj;
+                            })
                         };
                     }
                 },
@@ -76,19 +80,20 @@
             if (data.loading) {
                 return 'Hledám…';
             }
-            if (typeof data.description === 'undefined') {
-                data.imageElement = "<i class='fas fa-search'></i>";
-                data.description = "fulltextové vyhledávání";
-                data.type = "fulltext";
+            if (typeof data.Description === 'undefined') {
+                data.ImageElement = "<i class='fas fa-search'></i>";
+                data.Description = "fulltextové vyhledávání";
+                data.Type = "fulltext";
+                data.Text = data.text;
             }
             var $container = $(
                 "<div class='select2-result-repository clearfix'>" +
-                "<div class='select2-result-repository__avatar'>" + data.imageElement + "</div>" +
+                "<div class='select2-result-repository__avatar'>" + data.ImageElement + "</div>" +
                 "<div class='select2-result-repository__meta'>" +
-                "<div class='select2-result-repository__title'>" + data.text +"</div>" +
-                "<div class='select2-result-repository__description'>" + data.description + "</div>" +
+                "<div class='select2-result-repository__title'>" + data.Text +"</div>" +
+                "<div class='select2-result-repository__description'>" + data.Description + "</div>" +
                 "<div class='select2-result-repository__statistics'>" +
-                "<div class='select2-result-repository__forks'><i>" + data.type + "</i> </div>" +
+                "<div class='select2-result-repository__forks'><i>" + data.Type + "</i> </div>" +
                 "</div>" +
                 "</div>" +
                 "</div>"
